// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useExpandable returns a transformer to open items 1`] = `
[
  {
    "description": "DESCRIPTION",
    "id": 1,
    "isOpen": false,
    "name": "TEST ITEM #1",
    "severity": "medium",
  },
  {
    "cells": [
      {
        "props": {
          "colSpan": 7,
        },
        "title": <ExampleDetailsRow
          item={
            {
              "description": "DESCRIPTION",
              "id": 1,
              "itemId": 1,
              "name": "TEST ITEM #1",
              "severity": "medium",
            }
          }
        />,
      },
    ],
    "fullWidth": true,
    "parent": 2,
  },
]
`;

exports[`useExpandable returns an expandable configuration 1`] = `
{
  "current": {
    "openItems": [],
    "tableProps": {
      "onCollapse": [Function],
    },
    "transformer": [Function],
  },
}
`;

exports[`useExpandable sets an item as open onCollapse 1`] = `
[
  {
    "description": "DESCRIPTION",
    "id": 1,
    "isOpen": true,
    "name": "TEST ITEM #1",
    "severity": "medium",
  },
  {
    "cells": [
      {
        "props": {
          "colSpan": 7,
        },
        "title": <ExampleDetailsRow
          item={
            {
              "description": "DESCRIPTION",
              "id": 1,
              "itemId": 1,
              "name": "TEST ITEM #1",
              "severity": "medium",
            }
          }
        />,
      },
    ],
    "fullWidth": true,
    "parent": 2,
  },
]
`;
